Turned some for loops into for-each